solc_ossfuzz_seed_corpus/test_sol/test_63f710d1315c52a79d5b4de712b282dfb2c605cb375da4d0b17340ecb1b8231e_f01a1b9470670ac6ada57e374bf3a8c9acffcde0_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(function () external i0,bool i1,bool i2)  returns(bytes4 o0,bool o1)
{




  unchecked {



i2 = (-11907734373824298 == 4735543112249522);
i2 = (0x853f527d7e4a == 0xf3c4c50092bc);



  }

}
function f1(int208 i0,function () external i1)  returns(uint168 o0,bytes memory o1,uint232 o2)
{ }
// ----
// TypeError 2271: (su0.sol:114-152): Operator == not compatible with types int_const -11907734373824298 and int_const 4735543112249522
